--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+sqlparser = "*"
+walkdir = "2"
+toml = "*"
 
 [dev-dependencies]
 criterion = "0.3"
