--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sqlparser = { git = "https://github.com/andygrove/sqlparser-rs", rev="15d5f7164612c733417a86a97ef319eda3b2d634"}
+sqlparser = "0.5.1"
 walkdir = "2"
 toml = "*"
 serde = "*"
