--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "powersql"
 version = "0.1.0"
 authors = ["Daniël Heres <danielheres@gmail.com>"]
 edition = "2018"
+description = "Data transformation tool using SQL"
+license = "MIT"
 
 [dependencies]
 sqlparser = "0.5.1"
