--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,15 @@ license = "MIT"
 [dependencies]
 sqlparser = "0.5.1"
 walkdir = "2"
-toml = "*"
-serde = "*"
-serde_derive = "*"
-rayon = "*"
-structopt = "*"
-im = "*"
+toml = "0.5"
+serde = "1.0"
+serde_derive = "1.0"
+rayon = "1.3"
+structopt = "0.3"
+im = "15"
 
-tokio = { version = "*", features = ["full"] }
-tokio-postgres = "*"
+tokio = { version = "0.2", features = ["full"] }
+tokio-postgres = "0.5"
 
 [dev-dependencies]
 maplit = "*"
