--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "powersql"
-version = "0.1.7"
+version = "0.1.8"
 authors = ["Daniël Heres <danielheres@gmail.com>"]
 edition = "2018"
 description = "Data transformation tool using SQL"
 license = "MIT"
+repository = "https://github.com/Dandandan/PowerSQL"
 
 [dependencies]
 sqlparser = "0.5.1"
