--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "powersql"
-version = "0.1.8"
+version = "0.1.8    "
 authors = ["Daniël Heres <danielheres@gmail.com>"]
 edition = "2018"
 description = "Data transformation tool using SQL"
@@ -16,7 +16,7 @@ serde_derive = "1"
 structopt = "0.3"
 im = "15"
 
-tokio = { version = "0.2", features = ["full"] }
+tokio = { version = "0.2", features = ["macros"] }
 tokio-postgres = "0.5"
 
 [dev-dependencies]
