--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,19 @@ serde_derive = "1"
 structopt = "0.3"
 im = "15"
 
+# PostgreSQL
 tokio = { version = "0.2", features = ["macros"] }
 tokio-postgres = "0.5"
+
+# BigQuery
+google-bigquery2 = "*"
+# This project intentionally uses an old version of Hyper. See
+# https://github.com/Byron/google-apis-rs/issues/173 for more
+# information.
+hyper = "^0.10"
+hyper-rustls = "^0.6"
+serde_json = "^1.0"
+yup-oauth2 = "^1.0"
 
 [dev-dependencies]
 maplit = "1.0"
