--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ description = "Data transformation tool using SQL"
 license = "MIT"
 repository = "https://github.com/Dandandan/PowerSQL"
 
+
+[features]
+postgres = ["tokio-postgres"]
+
+
 [dependencies]
 sqlparser = "0.5.1"
 walkdir = "2"
@@ -18,8 +23,9 @@ im = "15"
 async-trait = "0.1"
 
 # PostgreSQL
+
 tokio = { version = "0.2", features = ["macros"] }
-tokio-postgres = "0.5"
+tokio-postgres = { version = "0.5", optional=true}
 
 # BigQuery
 google-bigquery2 = "*"
