--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -26,4 +26,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test --features postgres --verbose
