--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,12 @@ description = "Data transformation tool using SQL"
 license = "MIT"
 repository = "https://github.com/Dandandan/PowerSQL"
 
+
+[features]
+default = []
+postgres = ["tokio-postgres"]
+bigquery = ["google-bigquery2", "hyper", "hyper-rustls", "serde_json", "yup-oauth2"]
+
 [dependencies]
 sqlparser = "0.5.1"
 walkdir = "2"
@@ -15,9 +21,19 @@ serde = "1"
 serde_derive = "1"
 structopt = "0.3"
 im = "15"
+async-trait = "0.1"
+
+# PostgreSQL
 
 tokio = { version = "0.2", features = ["macros"] }
-tokio-postgres = "0.5"
+tokio-postgres = { version = "0.5", optional=true}
+
+# BigQuery
+google-bigquery2 = {version = "1", optional=true}
+hyper = {version = "^0.10", optional=true}
+hyper-rustls = {version="^0.6", optional=true}
+serde_json = {version="^1.0", optional=true}
+yup-oauth2 = {version = "^1.0", optional=true}
 
 [dev-dependencies]
 maplit = "1.0"
