--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ postgres = ["tokio-postgres"]
 bigquery = ["google-bigquery2", "hyper", "hyper-rustls", "serde_json", "yup-oauth2"]
 
 [dependencies]
-sqlparser = { git ="https://github.com/ballista-compute/sqlparser-rs", branch="main"}
+sqlparser = "0.6.1"
 walkdir = "2"
 toml = "0.5"
 serde = "1"
