--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Run postgres CI/CD
         run: |
           cd examples/project_1/
-          pip install pandas
+          pip install pandas SQLAlchemy
           python import_data/import.py
           cargo run --features postgres run
         env:
