--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -32,7 +32,7 @@ jobs:
           cargo run --features postgres test
         env:
           PG_PASSWORD: postgres
-          POSTGRES_HOST: localhost
+          PG_HOSTNAME: localhost
           PG_USERNAME: postgres
           PG_DATABASE: postgres
           PG_PORT: 5432
