--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -6,7 +6,7 @@ jobs:
   container-job:
     # Containers must run in Linux based operating systems
     runs-on: ubuntu-latest
-
+    container: ubuntu-latest
     # Service containers to run with `container-job`
     services:
       # Label used to access the service container
