--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run postgres CI/CD
         run: |
-          cd examples/project_1/
+          cd examples/postgres/
           cargo run --features postgres run
           cargo run --features postgres test
         env:
