--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -30,6 +30,8 @@ jobs:
       - name: Run postgres CI/CD
         run: |
           cd examples/postgres/
+          cargo run --features postgres check
+          cargo run --features postgres run
           cargo run --features postgres run
           cargo run --features postgres test
         env:
