Fix name of workflow and bash syntax

--- a/.github/workflows/bigquery.yml
+++ b/.github/workflows/bigquery.yml
@@ -1,4 +1,4 @@
-name: PostgreSQL integration test
+name: BigQuery integration test
 on: push
 
 jobs:
@@ -10,7 +10,7 @@ jobs:
       - name: Run BigQuery CI/CD
         run: |
           echo "$GOOGLE_APPLICATION_CREDENTIALS" > application.json
-          export GOOGLE_APPLICATION_CREDENTIALS=(pwd)/application.json
+          export GOOGLE_APPLICATION_CREDENTIALS=$(pwd)/application.json
 
           cd examples/bigquery/
           cargo run --features bigquery check
